--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,10 @@
       </ul>
     </section>
   </main>
-
+<nostr-one
+  login-url="https://example.com/login"
+  http-method="post"
+></nostr-one>
   <footer>
     <p>&copy; 2023 Nostr App Store. All rights reserved.</p>
   </footer>
